feat: hw-13
* Add fx rate separate module files.
